kubernetes/namespaces/default/pdfding/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pdfding
spec:
  selector:
    app: pdfding
  ports:
    - name: http
      targetPort: http
      port: 80
